docs: added vectors to replace some icons

--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -23,7 +23,11 @@
 .logo-section{
     width: 105px;
     height: 52px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
     background-color: #E60012;
+
 }
 
 .logo{
@@ -38,12 +42,14 @@ span{
     align-items: center;
 }
 
+.svg-icon{
+    margin: 0 10px 0 0;
+}
+
 .icon{
     width: 18.06px;
     height: 18.01px;
     margin: 0 10px 0 0;
-    background-size: contain;
-    background-repeat: no-repeat;
 }
 
 .searcher-input{
@@ -51,6 +57,17 @@ span{
     height: 34px;
     border-bottom: 1px solid;
 
+}
+
+.c-transition{
+    cursor: pointer;
+    color: rgb(72, 72, 72);
+    transition: color 200ms ease-in-out 25ms;
+}
+
+.c-transition:hover{
+    color: rgb(230, 0, 18);
+    transition: all 200ms ease-in-out 0s;
 }
 
 input{
