--- a/app/components/oCard/oCard.css
+++ b/app/components/oCard/oCard.css
@@ -10,3 +10,26 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
+
+.links{
+    font-family: 'Figtree', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+}
+
+.text{
+    font-family: 'Figtree', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.c-transition{
+    cursor: pointer;
+    color: rgb(72, 72, 72);
+    transition: color 200ms ease-in-out 25ms;
+}
+
+.c-transition:hover{
+    color: rgb(230, 0, 18);
+    transition: all 200ms ease-in-out 0s;
+}
