--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,9 @@
+body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Figtree', sans-serif;
+}
+
 .o-card-section{
     display: flex;
     flex-direction: row;
