docs: edited components styles

--- a/app/style.css
+++ b/app/style.css
@@ -5,6 +5,8 @@ body{
 }
 
 .o-card-section{
+    margin: 0 24px 48px 29px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
