--- a/app/components/banner/banner.css
+++ b/app/components/banner/banner.css
@@ -1,13 +1,81 @@
+.banner-section{
+    margin-top: 96px;
+}
+
 .background{
     width: auto;
     height: 493.11px;
-    background-position: center;
+    background-position: right;
+    background-size: cover;
 }
 
 .banner-image{
     width: 1440px;
     height: 520.31px;
     position: absolute;
-    top: 97px;
+    top: 125px;
     left: 37px;
+}
+
+span{
+    display: flex;
+    align-items: center ;
+
+}
+
+.content{
+    display: flex;
+    margin: 80px 45px 48px 36px;;
+    justify-content: space-between;
+}
+
+hr{
+   border: 1px solid rgb(218, 218, 218);
+}
+
+.title{
+    margin: 48px 0 0 36px;}
+
+h1{
+    color: rgb(72, 72, 72);
+    font-family: 'Figtree', sans-serif;
+    font-size: 28px;
+    margin-right: 30px;
+}
+
+p{  
+    width: 180px;
+    margin: 0 0 0 10px;
+    font-family: 'Figtree', sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+}
+
+.classification{
+    width: 43.7px;
+    height: 66.12px;
+    background-size: contain;
+}
+
+button{
+    color: white;
+    font-family: 'Figtree', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    width: 189.29px;
+    height: 48px;
+    background-color: rgb(230, 0, 18);;
+    border: 1px solid rgb(230, 0, 18);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 300ms ease-in-out 0s;
+    font-weight: 700;
+}
+
+button:hover{
+    width: 200px;
+    height: 60px;
+    transition: all 300ms ease-out 25ms;
+    animation-timing-function: ease-out;
+    animation-duration: 300ms;
 }
