--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -1,5 +1,9 @@
 header{
-    position: sticky;
+    position: fixed;
+    top: 0;
+    background-color: white;
+    width: 100%;
+    z-index: 1;
 }
 
 .menu{
