--- a/app/components/oCard/oCard.css
+++ b/app/components/oCard/oCard.css
@@ -1,6 +1,10 @@
 .o-card{
     width: 262px;
     height: 284.08px;
+    margin-top: 24px;
+    border: 1px solid rgb(218, 218, 218);
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .card{
@@ -9,15 +13,18 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    border-radius: 4px 4px 0 0;
 }
 
 .links{
+    margin: 16px 16px 58.6px 16px;
     font-family: 'Figtree', sans-serif;
     font-weight: 700;
     font-size: 15px;
 }
 
 .text{
+    margin: 0 16px;
     font-family: 'Figtree', sans-serif;
     font-weight: 300;
     font-size: 14px;
