--- a/app/style.css
+++ b/app/style.css
@@ -10,3 +10,10 @@ body{
     flex-direction: row;
     justify-content: space-between;
 }
+
+h1{
+    color: rgb(72, 72, 72);
+    font-family: 'Figtree', sans-serif;
+    font-size: 28px;
+    margin: 50px 0 8px 36px;
+}
