--- a/app/style.css
+++ b/app/style.css
@@ -4,6 +4,13 @@ body{
     font-family: 'Figtree', sans-serif;
 }
 
+h1{
+    color: rgb(72, 72, 72);
+    font-family: 'Figtree', sans-serif;
+    font-size: 28px;
+    margin: 50px 0 8px 36px;
+}
+
 .o-card-section{
     margin: 0 24px 48px 29px;
     display: flex;
@@ -11,9 +18,11 @@ body{
     justify-content: space-between;
 }
 
-h1{
-    color: rgb(72, 72, 72);
-    font-family: 'Figtree', sans-serif;
-    font-size: 28px;
-    margin: 50px 0 8px 36px;
+.gs-section{
+    display: flex;
+    justify-content: center;
+}
+
+app-gameshop{
+    width: 100%;
 }
