--- a/app/components/gameShop/gameShop.css
+++ b/app/components/gameShop/gameShop.css
@@ -21,6 +21,11 @@ h3{
     background-position: center;
 }
 
+.consoles-image{
+    width: 1144px;
+    height: 504.11px;
+}
+
 span{
     margin: 29px 0 29px 0;
     height: 80.08px;
