--- a/app/components/gameShop/gameShop.css
+++ b/app/components/gameShop/gameShop.css
@@ -40,7 +40,7 @@ button{
     font-weight: 700;
     width: 189.29px;
     height: 48px;
-    background-color: rgb(230, 0, 18);;
+    background-color: rgb(230, 0, 18);
     border: 1px solid rgb(230, 0, 18);
     border-radius: 4px;
     cursor: pointer;
